apply plugin: 'com.android.application'
apply plugin: 'me.tatarka.retrolambda'

apply plugin: 'kotlin-android'

apply plugin: 'kotlin-android-extensions'

android {
    compileSdkVersion 26
    buildToolsVersion "26.0.2"

    sourceSets {
        main {
            jniLibs.srcDirs = ['libs']
        }
    }

    defaultConfig {
        applicationId "com.company.sts_ar"
        minSdkVersion 19
        targetSdkVersion 26
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        release {
            minifyEnabled false
            ndk {
                abiFilters "arm64-v8a", "armeabi-v7a"
            }
        }
        debug {
            minifyEnabled false
            debuggable true
            ndk {
                abiFilters "arm64-v8a", "armeabi-v7a"
            }
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}



dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
    implementation 'com.android.support:appcompat-v7:26.1.0'
    implementation 'com.jakewharton.timber:timber:4.5.1'
    implementation 'commons-io:commons-io:2.5'
    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
    implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
    implementation "com.android.support:design:26.1.0"
    implementation "com.android.support:cardview-v7:26.1.0"
    implementation "com.android.support.constraint:constraint-layout:1.0.2"
    implementation 'com.google.code.gson:gson:2.8.2'
    implementation 'com.google.android.gms:play-services-vision:11.4.2'
    implementation 'info.androidhive:barcode-reader:1.1.3'
    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
    implementation 'com.github.bumptech.glide:glide:4.2.0'
    implementation 'com.google.dagger:dagger:2.11'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
    implementation files('libs/Vuforia.jar')
}
